fix(Close): display issues of the close button in contextual light and dark modes

--- a/scss/_close.scss
+++ b/scss/_close.scss
@@ -2,6 +2,7 @@
 @use "mixins/border-radius" as *;
 @use "mixins/color-mode" as *;
 @use "variables" as *;
+@use "variables-dark" as *;
 
 // Transparent background and border properties included for button version.
 // iOS requires the button element instead of an anchor tag.
@@ -17,7 +18,6 @@
   --#{$prefix}btn-close-focus-shadow: #{$btn-close-focus-shadow};
   --#{$prefix}btn-close-focus-opacity: #{$btn-close-focus-opacity};
   --#{$prefix}btn-close-disabled-opacity: #{$btn-close-disabled-opacity};
-  --#{$prefix}btn-close-white-filter: #{$btn-close-white-filter};
   // scss-docs-end close-css-vars
 
   box-sizing: content-box;
@@ -26,6 +26,7 @@
   padding: $btn-close-padding-y $btn-close-padding-x;
   color: var(--#{$prefix}btn-close-color);
   background: transparent var(--#{$prefix}btn-close-bg) center / $btn-close-width auto no-repeat; // include transparent for button elements
+  filter: var(--#{$prefix}btn-close-filter);
   border: 0; // for button elements
   @include border-radius();
   opacity: var(--#{$prefix}btn-close-opacity);
@@ -52,18 +53,20 @@
 }
 
 @mixin btn-close-white() {
-  filter: var(--#{$prefix}btn-close-white-filter);
+  --#{$prefix}btn-close-filter: #{$btn-close-filter-dark};
 }
 
-.btn-close[data#{$data-infix}theme="dark"],
 .btn-close-white {
   @include btn-close-white();
 }
 
+:root,
+[data-coreui-theme="light"] {
+  --#{$prefix}btn-close-filter: #{$btn-close-filter};
+}
+
 @if $enable-dark-mode {
-  @include color-mode(dark) {
-    .btn-close {
-      @include btn-close-white();
-    }
+  @include color-mode(dark, true) {
+    @include btn-close-white();
   }
 }
